2007-08-17  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ruby.el (hs-minor-mode-hook): created, placed in hs-setup-overlay initialization to fix a bug #13162

2007-08-15  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-scripts.el (rails-script:setup-output-buffer): fixed compilation warning

	* rails-ruby.el (ruby-hs-minor-mode): created, support ruby in hs-minor-mode

2007-08-11  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-compat.el (try-complete-abbrev): fixed

	* rails-core.el (rails-core:configuration-file, :rails-core:configuration-files): created functions

	* rails-speedbar-feature.el (rails-speedbar:roots): added
	migrations and configuration files to speedbar

2007-08-05  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-test.el, rails-ui.el: apply patch #11998, created additional key
	shortcuts (thanks Tom Ten Thij)

	* rails-compat.el: apply patch #12743, replace
	`indent-or-complete` to `indent-and-complete` (thanks Peter Williams)

2007-08-04  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-navigation.el (rails-nav:goto-layouts): fixed bug #12754,
	broken `rails-nav:goto-layouts`

2007-07-26  Dmitry Galinsky  <dima.exe@gmail.com>

	* inflections.el: more inflections (by Edvard Majakari)

	* rails-ruby.el (ruby-align-rules-list): improved `align` support

	* rails-test.el (rails-test:line-regexp): added support of '-' symbol in file name

2007-05-23  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-test.el (rails-test:line-regexp): bug #10792: updated regexp

2007-05-05  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails.el: fixed #10613, wrong comparsion of emacs major-version

2007-05-03  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-test.el (rails-test:line-regexp): patch #10532, allows '-' to occur in the errror filepath (thanks Peter Williams)

2007-04-27  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails.el: raise a error if emacs-rails run on old version of Emacs (less 22).

	* rails-ruby.el: check available flymake before setup ruby-flymake.
