@@ -1,3 +1,8 @@
+2007-08-18  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-scripts.el (rails-script:run-interactive): setup a
+	variable `ruby-buffer' for corect working with `inf-ruby'
+
 2007-08-17  Dmitry Galinsky  <dima.exe@gmail.com>
 
 	* rails-ruby.el (hs-minor-mode-hook): created, placed in hs-setup-overlay initialization to fix a bug #13162
